# sys-hidplus

./: .gitignore  build-to-release.sh  docker-compose.yaml
.github/workflows/: compile.yml
client/client-py/: input_pc_alt.py
client/client-rs/: Cargo.toml  README.md
client/client-rs/src/: client.rs  config.rs  input.rs  main.rs  pad.rs
client/client-rs/src/input/: mod.rs  switch.rs
client/client-rs/src/input/common/: gilrs.rs  mod.rs  multiinput.rs  reader.rs  sdl.rs
client/rust-client/: Cargo.toml
client/rust-client/src/: client.rs  input.rs  main.rs
docker/: Dockerfile
source/: con_manager.cpp  main.cpp  udp_manager.hpp
