[package]
name = "client-rs"
version = "1.0.0"
authors = ["Kenneth <Kenneth@DESKTOP-VHTOUHH>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
confy = "0.4.0"
crossbeam-channel = "0.5.1"
ctrlc = { version = "3.1.9", features = ["termination"] }
cute = "0.3.0"
gilrs = "0.8.1"
multiinput = "0.1.0"
sdl2 = "0.34.5"
serde = { version = "1.0.126", features = ["derive"] }
structure = "0.1.2"
